@@ -132,6 +132,7 @@ gnulib_modules="
   linebuffer
   link
   link-follow
+  linkat
   long-options
   lstat
   maintainer-makefile
