@@ -108,29 +108,6 @@ ln b b~ || framework_failure
 ln -f --b=simple a b || fail=1
 
 # ===================================================
-# determine if link(2) follows symlinks on this system
-touch a || framework_failure
-ln -s a symlink || framework_failure
-ln symlink hard-to-sym > /dev/null 2>&1 || framework_failure
-ls=`ls -lG hard-to-sym`x
-case "$ls" in
-  *'hard-to-symx') link_follows_symlink=yes ;;
-  *'hard-to-sym -> ax') link_follows_symlink=no ;;
-  *) framework_failure ;;
-esac
-
-if test $link_follows_symlink = no; then
-  # Create a hard link to a dangling symlink.
-  # This is not portable.  At least sunos4.1.4 and OpenBSD 2.3 fail this test.
-  # They get this:
-  # ln: cannot create hard link `hard-to-dangle' to `no-such-dir': \
-  #   No such file or directory
-  #
-  ln -s /no-such-dir || fail=1
-  ln no-such-dir hard-to-dangle > /dev/null 2>&1 || fail=1
-fi
-rm -rf a symlink hard-to-sym hard-to-dangle
-# ===================================================
 
 # Make sure ln can make simple backups.
 # This was fixed in 4.0.34.  Broken in 4.0r.
